--- a/CSS/style.css
+++ b/CSS/style.css
@@ -140,10 +140,10 @@ header a:hover{
   margin-top: 150px;
   font-size: 75px;
   margin-bottom:0px;
-  color: #cfcfcf;
-  text-shadow: -10px 10px 0px #708090,
-                 -20px 20px 0px #696969,
-                 -30px 30px 0px #000000;
+  color: black;
+  text-shadow: -10px 10px 0px maroon,
+                 -20px 20px 0px red,
+                 -30px 30px 0px #e94b3cff;
 
 }
 
