--- a/CSS/style.css
+++ b/CSS/style.css
@@ -181,8 +181,8 @@ header a:hover{
 
 #about{
   padding:0px;
-  color: tan;
-  background-color: #2c1503;
+  color: white;
+  background-color: black;
   text-align: center;
   font-family: georgia;
 }
