--- a/hot-tweets/views/partials/navbar.ejs
+++ b/hot-tweets/views/partials/navbar.ejs
@@ -3,16 +3,19 @@
     <body>
         <ul class="nav justify-content-center">
             <li class="nav-item">
-              <a class="nav-link active" href="#">Day</a>
+              <a class="nav-link active" href="/day">Day</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Week</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Month</a>
+              <a class="nav-link" href="/month">Month</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/day"  aria-disabled="true">Year</a>
+              <a class="nav-link" href="/year">Year</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/allTime">All Time</a>
             </li>
           </ul>
 </body>
