--- a/hot-tweets/views/partials/siteBanner.ejs
+++ b/hot-tweets/views/partials/siteBanner.ejs
@@ -2,7 +2,7 @@
 <html>
     <body>
         <nav class="navbar navbar-dark bg-dark">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="/">
               <img src="https://lh3.googleusercontent.com/proxy/DcaOgRy6HWrVPEM3BBcHFZJi7GWrGOE9ZFEdpZY6muoHrgM20cNNTdZpxy2n7U_1BEl3iSAjAmXQADCDzjwEqZxCz2ra2wQly0_KfGHzyuvcjBPmAn7Riuk0A7cgC8yioT_LWNdU9VaDZOnkDJqkfBc5520tTrLeyA" 
               width="30" height="30" class="d-inline-block align-top" alt="">
               Hot Tweets
