--- a/hot-tweets/views/index.ejs
+++ b/hot-tweets/views/index.ejs
@@ -6,7 +6,9 @@
 
     </head>
     <body>
+        
         <%- include('partials/sitebanner') %>
+        <% if(ageVerified == true){ %>
         <%- include('partials/navbar') %>
         
         
@@ -16,7 +18,7 @@
             <div class="card-body">
             <h5 class="card-title"><%= tweets[i].author %></h5>
               <p class="card-text"><%= tweets[i].description%></p>
-              <p class="card-text"><small class="text-muted"><%=tweets[i].favorite_count%> Favorites <%= tweets[i].publish_date%></small></p>
+              <p class="card-text"><small class="text-muted"><%=tweets[i].favorite_count%> Favorites - <%= tweets[i].publish_date%></small></p>
             </div>
             <% if(tweets[i].picture){ %>
             <img src="<%=tweets[i].picture%>" class="card-img-top" alt="...">
@@ -25,5 +27,16 @@
           <% } %>
         </div>
         
+        <% }else { %>
+            <div class="jumbotron">
+                <h1 class="display-4">Hello, world!</h1>
+                <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+                <hr class="my-4">
+                <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+                <a class="btn btn-primary btn-lg" href="/verifyAge" role="button">Learn more</a>
+              </div>
+        <% } %>
+        
+
     </body>
 </html>
