changed text on the age verification

--- a/hot-tweets/views/index.ejs
+++ b/hot-tweets/views/index.ejs
@@ -29,11 +29,13 @@
         
         <% }else { %>
             <div class="jumbotron">
-                <h1 class="display-4">Hello, world!</h1>
-                <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+                <h1 class="display-4">Hi, How's it going?</h1>
+                <p class="lead">Our Mission is to create a website that uses Twitter api to show only the most liked and retweeted posts. It does not show trends of what multiple Twitter users are talking about at any given time.
+                    The application would show the most popular tweets of the hour/day/week. The website would be accessible to anyone, even if they don’t have a Twitter account. 
+                    </p>
                 <hr class="my-4">
-                <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-                <a class="btn btn-primary btn-lg" href="/verifyAge" role="button">Learn more</a>
+                <p>Before we continue please verify that you are 18 years old.</p>
+                <a class="btn btn-primary btn-lg" href="/verifyAge" role="button">I am 18</a>
               </div>
         <% } %>
         
