--- a/hot-tweets/views/index.ejs
+++ b/hot-tweets/views/index.ejs
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" 
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
     </head>
     <body>
+
         <%- include('partials/sitebanner') %>
+        <% if(ageVerified == true){ %>
         <%- include('partials/navbar') %>
-        
-        
+
+
         <div class="container">
             <% for (var i = 0; i < tweets.length; i++) { %>
         <div class="card">
             <div class="card-body">
             <h5 class="card-title"><%= tweets[i].author %></h5>
               <p class="card-text"><%= tweets[i].description%></p>
-              <p class="card-text"><small class="text-muted"><%=tweets[i].favorite_count%> Favorites <%= tweets[i].publish_date%></small></p>
+              <p class="card-text"><small class="text-muted"><%=tweets[i].favorite_count%> Favorites - <%= tweets[i].publish_date%></small></p>
             </div>
             <% if(tweets[i].picture){ %>
             <img src="<%=tweets[i].picture%>" class="card-img-top" alt="...">
@@ -24,6 +26,18 @@
           </div>
           <% } %>
         </div>
-        
+
+        <% }else { %>
+            <div class="jumbotron">
+                <h1 class="display-4">Hi, How's it going?</h1>
+                <p class="lead">Our Mission is to create a website that uses Twitter api to show only the most liked and retweeted posts. It does not show trends of what multiple Twitter users are talking about at any given time.
+                    The application would show the most popular tweets of the hour/day/week. The website would be accessible to anyone, even if they don’t have a Twitter account.
+                    </p>
+                <hr class="my-4">
+                <p>Before we continue please verify that you are 18 years old.</p>
+                <a class="btn btn-primary btn-lg" href="/verifyAge" role="button">I am 18</a>
+              </div>
+        <% } %>
+
     </body>
 </html>
